Fixed marker alignment and chrom title update

--- a/assets/css/gens.scss
+++ b/assets/css/gens.scss
@@ -278,27 +278,33 @@ html, body {
     }
 }
 
-#cytogenetic-band {
+#chromosome-title {
     display: grid;
     grid-row: 1;
     grid-column: 1;
 }
 
-#interactive-container {
+#cytogenetic-ideogram {
     display: grid;
     grid-row: 2;
+    grid-column: 1;
+}
+
+#interactive-container {
+    display: grid;
+    grid-row: 3;
     grid-column: 1;
 
     #interactive-static {
         z-index: 1;
         pointer-events: none;
-        grid-row: 3;
+        grid-row: 4;
         grid-column: 1;
     }
 
     #interactive-content {
         z-index: 1;
-        grid-row: 3;
+        grid-row: 4;
         grid-column: 1;
     }
 
@@ -487,7 +493,7 @@ html, body {
         flex: 1;
     }
     .spinner {
-        border-top: 3px solid rgba($black, 0.5);
+        border-top: 3px solid rgba($menubar-bg-color, 0.5);
         border-right: 3px solid transparent;
         border-radius: 50%;
         width: 30px;
